@startuml
!theme monochrome
skinparam backgroundColor #1a1a24
skinparam classBackgroundColor #1e1e32
skinparam classBorderColor #667eea
skinparam classFontColor white
skinparam classHeaderBackgroundColor #2d2d3a
skinparam arrowColor #667eea
skinparam noteBackgroundColor #2d2d3a
skinparam noteBorderColor #764ba2
skinparam noteFontColor white

title "Factory Method Pattern\nOmniTech - Creación polimórfica de productos"

class ProductFactory {
    - PRODUCT_MAP = {
        'fisico': PhysicalProduct,
        'software': DigitalLicense,
        'digital': DigitalLicense
    }
    ..
    + {static} obtener_modelo(tipo): Model
    + {static} obtener_producto(tipo, id): Product
    + {static} obtener_producto_o_404(tipo, id): Product
    + {static} obtener_producto_con_lock(tipo, id): Product
    + {static} es_tipo_fisico(tipo): bool
    + {static} obtener_nombre_corto(tipo): str
}

note top of ProductFactory
  Patrón Factory Method.
  Centraliza la resolución de modelos
  para que views/services no necesiten
  if tipo == 'fisico'
end note

class "Cliente\n(services.py, views_cart.py)" as Client {
    + procesar_pago()
    + agregar_al_carrito()
}

abstract class "Product" as Product {
    + {abstract} procesar_venta(cantidad): bool
}

class PhysicalProduct {
    + procesar_venta(cantidad): bool
}

class DigitalLicense {
    + procesar_venta(cantidad, orden): bool
}

Client --> ProductFactory : "resuelve modelo"
ProductFactory --> Product : "retorna instancia"
Product <|-- PhysicalProduct
Product <|-- DigitalLicense

note bottom of Client
  Código cliente:
  
  producto = ProductFactory.\n    obtener_producto_o_404(tipo, id)
  producto.procesar_venta(cantidad)
  
  SIN if tipo == ...
end note

note bottom of ProductFactory
  Agregar nuevo tipo:
  Solo agregar a PRODUCT_MAP
  y crear la subclase de Product.
  Sin modificar clientes.
end note

@enduml
